--- a/projetscreen.html
+++ b/projetscreen.html
@@ -6,6 +6,15 @@
     <title>jeux</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li class="menu-accueil"><a href="index.html">Accueil</a></li>
+            <li class="menu-jeux"><a href="projetscreen.html">Jeux</a></li>
+            <li class="menu-site"><a href="pagesites.html">Apps</a></li>
+            <li class="menu-contact"><a href="contact.html">contact</a></li>
+            <li class="menu-video"><a href="videoscreen.html"></a></li>
+            <audio class="video" src="audioscreen.mp3" controls loop preload="metadata"></audio>
+        </ul>
+    </nav>
 </body>
 </html>
